@@ -864,7 +864,8 @@ exit
 
       <dt><a href="image3.html#sharpen">sharpen</a>, <a href=
       "image3.html#sharpen_channel">sharpen_channel</a>, <a href=
-      "image3.html#unsharp_mask">unsharp_mask</a></dt>
+      "image3.html#unsharp_mask">unsharp_mask</a>, <a href=
+      "image3.html#unsharp_mask_channel">unsharp_mask_channel</a></dt>
 
       <dd>Sharpen the image</dd>
     </dl>
