@@ -156,6 +156,8 @@
 #undef HAVE_THUMBNAILIMAGE
 #undef HAVE_TINTIMAGE
 #undef HAVE_UNISTD_H
+/* Introduced in IM 6.1.0 */
+#undef HAVE_UNSHARPMASKIMAGECHANNEL
 #undef HAVE_WHITETHRESHOLDIMAGE
 #undef HAVE_XIMPORTIMAGE
 #undef MAGICKNAME
